fix: letter-spacing p h2 h3

--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -53,6 +53,7 @@ h2 {
     font-weight: 400;
     font-size: 44px;
     line-height: 130%;
+    letter-spacing: 0.001em;
 }
 
 h3 {
@@ -61,6 +62,7 @@ h3 {
     font-weight: 400;
     font-size: 35px;
     line-height: 130%;
+    letter-spacing: 0.06em;
 }
 
 h4 {
@@ -105,6 +107,7 @@ p {
     font-size: 15px;
     line-height: 160%;
     color: var(--main-color-dark-s);
+    letter-spacing: 0.0001em;
 }
 
 .wrapper {
@@ -128,7 +131,6 @@ section {
 }
 
 header .container {
-    /* display: flex; */
     justify-content: space-between;
 }
 
